--- a/apps/web/src/app/globals.css
+++ b/apps/web/src/app/globals.css
@@ -8,19 +8,36 @@
 @theme inline {
   --color-background: var(--background);
   --color-foreground: var(--foreground);
-  --font-sans: var(--font-geist-sans);
-  --font-mono: var(--font-geist-mono);
+  --color-primary: var(--primary);
+  --color-secondary: var(--secondary);
+  --font-poppins: var(--font-poppins);
+  --font-noto-sans-sc: var(--font-noto-sans-sc);
 }
 
 @media (prefers-color-scheme: dark) {
   :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
+    --background: #121111;
+    --foreground: #e0e0e0;
+    --primary: #303030;
+    --secondary: #191919;
+    --color-primary-hover: #202020;
+  }
+}
+@layer utilities {
+  .flex-row-center {
+    @apply flex flex-row items-center justify-center;
+  }
+  .flex-col-center {
+    @apply flex flex-col items-center justify-center;
+  }
+  .flex-row-between {
+    @apply flex flex-row items-center justify-between;
   }
 }
 
 body {
   background: var(--background);
   color: var(--foreground);
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: var(--font-poppins), var(--font-noto-sans-sc);
+  font-weight: 400;
 }
